fix h1 overflow

--- a/css/default.css
+++ b/css/default.css
@@ -10,6 +10,12 @@ h1 {
     text-align: center;
     font-weight: 300;
     margin: 50px auto 50px auto;
+    font-size: 30px;
+}
+@media (min-width: 400px) {
+    h1 {
+        font-size: 36px;
+    }
 }
 
 .placeholder-bottom {
